# Paulana-Zuplei

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
Database_Refactoring_and_Population/: Analysis.ipynb
data/: db2.sqlite  db_new.sqlite  db_original_with_new_structure.sqlite
scratch/: check_bom_data.py  check_db.py  test_api.py
scripts/: gemini_example.py
src/backend/: agent.py  component_from_supplier.py  component_supplier_pair.py  database_manager.py  database_mock.py  gemini_client.py  main.py  models.py  pipeline.py  tools.py
src/frontend/backend/: main.py  pyproject.toml  transforms.py
src/frontend/backend/templates/: analysis.html  comparison.html  start.html
tests/: test_agnes.py  test_integration.py
