[project]
name = "tumai-hackathon"
version = "0.1.0"
description = "LLM-Driven Supply Chain Optimizer"
requires-python = ">=3.12"
dependencies = [
    # Backend — AI / data stack
    "google-genai",
    "grpcio==1.80.0",
    "grpcio-status==1.71.2",
    "proto-plus==1.27.2",
    "protobuf==5.29.6",
    "httplib2==0.31.2",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pydantic==2.13.2",
    "pydantic-core==2.46.2",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "tqdm==4.67.3",
    "cryptography==46.0.7",
    "typing-extensions==4.15.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "idna==3.11",
    "urllib3==2.6.3",
    "python-dateutil==2.9.0.post0",
    "annotated-types==0.7.0",
    "typing-inspection==0.4.2",
    "six==1.17.0",
    "uritemplate==4.2.0",
    "pyparsing==3.3.2",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "cffi==2.0.0",
    "pycparser==3.0",
    # Frontend — web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]
